[gd_scene load_steps=3 format=3 uid="uid://d38qjihj04nn7"]

[ext_resource type="Script" uid="uid://6cfbin7scxk8" path="res://scenes/shop/shop.gd" id="1_lx5au"]
[ext_resource type="PackedScene" uid="uid://c5aveotrq72su" path="res://scenes/layout/info_header.tscn" id="2_qaxay"]

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_lx5au")

[node name="HUD" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1440, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -720.0
offset_top = -540.5
offset_right = 720.0
offset_bottom = 540.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 100
text = "Shop"

[node name="InfoHeader" parent="HUD/VBoxContainer/HBoxContainer" instance=ExtResource("2_qaxay")]
layout_mode = 2

[node name="StartStageButton" type="Button" parent="HUD/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start Stage"

[node name="Panel" type="Panel" parent="HUD/VBoxContainer"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Buy"

[node name="BuyContainer" type="HBoxContainer" parent="HUD/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Panel2" type="Panel" parent="HUD/VBoxContainer"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/VBoxContainer/Panel2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HUD/VBoxContainer/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade"

[node name="UpgradeContainer" type="HBoxContainer" parent="HUD/VBoxContainer/Panel2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="HUD/VBoxContainer/HBoxContainer/StartStageButton" to="." method="_on_start_stage_button_pressed"]
